# embuild_colorize

./: .gitignore  CHANGELOG.md  README.md  setup.cfg  update_and_upload.ps1  update_and_upload_test.ps1
src/embuild_colorize/: __init__.py  __main__.py  colorize.py
