[metadata]
name = embuild_colorize
version = attr: embuild_colorize.version.VERSION
author = Viacheslav
author_email = viacheslav@mcublog.xyz
description = A simple coloring for stdout from Segger Embuild tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mcublog/embuild_colorize
project_urls =
    Changelog = https://github.com/Mcublog/embuild_colorize/blob/master/CHANGELOG.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src